--- a/RealEstate.API/appsettings.json
+++ b/RealEstate.API/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RealEstateConnection": "Data Source=.;Initial Catalog=RealEstateDb;Integrated Security=True;Trust Server Certificate=True"
 }
