--- a/RealEstate.ApplicationLayer/RealEstate.ApplicationLayer.csproj
+++ b/RealEstate.ApplicationLayer/RealEstate.ApplicationLayer.csproj
@@ -10,4 +10,12 @@
     <ProjectReference Include="..\RealEstate.DAL\RealEstate.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+  </ItemGroup>
+
 </Project>
