-Fixed Delete method in PropertyService -Added DB Migration

--- a/RealEstate.API/appsettings.json
+++ b/RealEstate.API/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "RealEstateConnection": "Data Source=.;Initial Catalog=RealEstateDb;Integrated Security=True;Trust Server Certificate=True"
+  "ConnectionStrings": { "RealEstateConnection": "Data Source=.;Initial Catalog=RealEstateDb;Integrated Security=True;Trust Server Certificate=True" }
 }
