Seeding Categories and ProductTypes in DbContext -Added service for categories and products types and their interfaces

--- a/RealEstate.ApplicationLayer/RealEstate.ApplicationLayer.csproj
+++ b/RealEstate.ApplicationLayer/RealEstate.ApplicationLayer.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Contracts\IGeneralService.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RealEstate.DAL\RealEstate.DAL.csproj" />
   </ItemGroup>
 
