Fixed Image handling, added PropertyImage repository, Navigation property removed from PropertyImage entity, ViewPropertyDTO was changed to return only 1 image, added imagestorageservice interface in application layer to handle dealing with repository (adding/deleting images) and added FileLocalStorage in API Layer to handle hosting environment and file upload. Injected dependencies. Added ApiKey custom attribute for API Key authorization, added filter  class and authentication class.

--- a/RealEstate.API/appsettings.json
+++ b/RealEstate.API/appsettings.json
@@ -6,5 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "RealEstateConnection": "Data Source=.;Initial Catalog=RealEstateDb;Integrated Security=True;Trust Server Certificate=True" }
+  "ConnectionStrings": { "RealEstateConnection": "Data Source=.;Initial Catalog=RealEstateDb;Integrated Security=True;Trust Server Certificate=True" },
+  "APIKey": "7tvfTPnxTY0hA+FbfiEBDsC631ByKdaADhhsoOdrSss="
+
 }
